# autumn_qiu_framework

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.agents/skills/autumn-design-taste/: SKILL.md
.agents/skills/commit/: SKILL.md
.agents/skills/new-branch/: SKILL.md
.agents/skills/pr/: SKILL.md
.claude/skills/autumn-design-taste/: SKILL.md
.claude/skills/autumn-memory/: SKILL.md
.claude/skills/autumn-web-design-engineer/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/new-branch/: SKILL.md
.codex/environments/: environment.toml
.github/workflows/: ci.yml
autumn/: __init__.py
autumn/builtin/: __init__.py  _http.py  collection_terr.py  data_terr.py  encoding_terr.py  fs_terr.py  knowledge_terr.py  math_terr.py  mcp_catalog.py  memory_terr.py  text_terr.py  time_terr.py  web_terr.py
autumn/core/: __init__.py  config.py  framework.py  interaction.py  paths.py  project_intelligence.py  security.py  types.py
autumn/core/api/: __init__.py  base.py  embedding.py  hermes.py  interfaces.py
autumn/core/codebase/: __init__.py  memory.py
autumn/core/components/: __init__.py  agent.py  mcp.py  (+7 more)
autumn/plugins/: loader.py
autumn/server/: __init__.py  app.py  integrations.py
desktop/: README.md  project.yml
desktop/AutumnApp/: AutumnApp.swift  ContentView.swift
docs/: api-stability.md  bench-recall.md  everos-4d-memory-takeaways.md  http-sse-contract.md  local-build-test.md  rfc-4d-memory.md  rfc-cooperative-workflow.md  rfc-terr-mcp-workflow.md  roadmap.md
examples/: basic_usage.py  with_builtin_terrs.py  with_plugins.py
script/: bench_recall.py  build_and_run.sh
skills/: README.md
tests/: test_4d_quality_benchmark.py  test_agent.py  test_async_index.py  test_behavior_config.py  test_bench_recall.py  test_builtin_terrs.py  test_codebase_memory.py  test_collaboration_trace.py  test_components.py  test_config_from_env.py  test_contract_doc_sync.py  test_cooperative_workflow.py  test_framework.py  test_hermes.py  test_http_sse_contract.py  test_lexical_backend.py  test_markdown_backend.py  test_mcp.py  test_memory.py  test_memory_4d_activate.py  test_memory_4d_push.py  test_memory_4d_scoring.py  test_memory_access.py  test_memory_access_skill.py  test_memory_annotate.py  test_memory_dimensions.py  test_memory_entry_dimensions.py  test_memory_evolve.py  test_memory_facts.py  test_memory_profile.py  test_memory_prompts.py  test_memory_skills.py  test_network_hardening.py  test_paths.py  test_per_turn_memory_lifecycle.py  test_project_memory.py  test_project_metadata.py  test_push_end_to_end.py  test_recall_fallback.py  test_robustness.py  (+23 more)
web/: .dockerignore  Dockerfile  README.md  package.json  wrangler.toml
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/hf/: Dockerfile  README.md  app.py  deploy.sh  space_card.md
web/worker/: package.json
windows/: .gitignore  AutumnDesktop.sln  README.md
windows/AutumnDesktop/: App.xaml  App.xaml.cs  AutumnDesktop.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
(+134 files in other folders)
