[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autumn"
version = "0.1.0"
description = "秋/Autumn — A Multi-Model Collaborative Workflow Framework"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
vector = ["numpy>=1.24"]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "numpy>=1.24",
    "fastapi>=0.110",
]

[project.scripts]
autumn-server = "autumn.server.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
