[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autumn"
version = "0.1.0"
description = "秋/Autumn — A Multi-Model Collaborative Workflow Framework"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
vector = []
server = [
    "fastapi>=0.110,<0.111",
    "pydantic>=1.10,<2",
    "uvicorn[standard]>=0.27",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "fastapi>=0.110,<0.111",
    "pydantic>=1.10,<2",
]

[project.scripts]
autumn-server = "autumn.server.app:main"

[tool.setuptools.packages.find]
include = ["autumn*"]
exclude = ["desktop*", "examples*", "script*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
